--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,6 +16,7 @@ build:
 
 requirements:
   build:
+    - toolchain
     - python
     - cmake
     - boost 1.61.*
@@ -44,3 +45,4 @@ about:
 extra:
   recipe-maintainers:
     - xantares
+
