--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,7 @@ build:
     - vc9  # [win and py27]
     - vc10  # [win and py34]
     - vc14  # [win and py35]
-  skip: true  # [win64 or (win and (not py35))]
+  skip: true  # [win and (not py35)]
 
 requirements:
   build:
