--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,11 +8,19 @@ source:
   fn: CGAL-{{ version }}.zip
   url: https://github.com/CGAL/cgal/releases/download/releases%2FCGAL-{{ version }}/CGAL-{{ version }}.zip
   sha256: 34669adf0378e30555df28cc4eef3ef7f46f35c984f4c99a3a16417035dfe083
+  patches:
+    - cgal-mpir.patch  # [win]
+    # https://github.com/CGAL/cgal/pull/1759
+    - fix-exponent-type.patch
 
 build:
   number: 1
-# fails with mpir as replacement of gmp on windows
-  skip: true  # [win]
+  features:
+    - vc9  # [win and py27]
+    - vc10  # [win and py34]
+    - vc14  # [win and py35]
+  # http://doc.cgal.org/latest/Manual/installation.html#seccompilers
+  skip: true  # [win and py27]
 
 requirements:
   build:
@@ -34,13 +42,13 @@ test:
     - test -f ${PREFIX}/include/CGAL/AABB_tree.h  # [unix]
     - test -f ${PREFIX}/lib/libCGAL.so  # [linux]
     - test -f ${PREFIX}/lib/libCGAL.dylib  # [osx]
+    - if not exist %LIBRARY_INC%\CGAL\AABB_tree.h exit 1  # [win]
   imports:
     - CGAL
 
 about:
   home: http://www.cgal.org/
   license: GPL3/LGPL3
-  license_file: LICENSE
   summary: Computational Geometry Algorithms Library
 
 extra:
