--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,7 +9,7 @@ source:
   url: https://github.com/CGAL/cgal/releases/download/releases%2FCGAL-{{ version }}/CGAL-{{ version }}.zip
   sha256: 34669adf0378e30555df28cc4eef3ef7f46f35c984f4c99a3a16417035dfe083
   patches:
-    - cgal-mpir.patch  # [win]
+    - cgal-mpir.patch
     # https://github.com/CGAL/cgal/pull/1759
     - fix-exponent-type.patch
 
