--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,10 +12,9 @@ source:
 build:
   number: 1
   features:
-    - vc10  # [win and py34]
     - vc14  # [win and py35]
-  # http://doc.cgal.org/latest/Manual/installation.html#seccompilers
-  skip: true  # [win and py27]
+  # mpfr only supports vc14
+  skip: true  # [win and py < 35]
 
 requirements:
   build:
