MNT: Re-rendered with conda-smithy 2.2.2
fix

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,13 +22,13 @@ requirements:
     - python
     - cmake
     - boost-cpp 1.63.*
-    - mpfr
+    - mpfr 3.*
     - eigen
     - swig
   run:
     - python
     - boost-cpp 1.63.*
-    - mpfr
+    - mpfr 3.*
 
 test:
   commands:
