--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "4.10" %}
+{% set version = "4.10.1" %}
 
 package:
   name: cgal
@@ -7,10 +7,10 @@ package:
 source:
   fn: CGAL-{{ version }}.zip
   url: https://github.com/CGAL/cgal/releases/download/releases%2FCGAL-{{ version }}/CGAL-{{ version }}.zip
-  sha256: 1fde30ae16b6a31cd1aae9196d0952a1ffc23c9de0a9c319ce6cba3164292218
+  sha256: 27006501ab2ebd5a07849dbfb34ae2331d5afcf316d6e5484b4e10a89ea53dd6
 
 build:
-  number: 1
+  number: 0
   features:
     - vc14  # [win and py>=35]
   # mpfr only supports vc14
@@ -33,8 +33,7 @@ requirements:
 test:
   commands:
     - test -f ${PREFIX}/include/CGAL/AABB_tree.h  # [unix]
-    - test -f ${PREFIX}/lib/libCGAL.so  # [linux]
-    - test -f ${PREFIX}/lib/libCGAL.dylib  # [osx]
+    - test -f ${PREFIX}/lib/libCGAL${SHLIB_EXT}  # [unix]
     - if not exist %LIBRARY_INC%\CGAL\AABB_tree.h exit 1  # [win]
   imports:
     - CGAL
