--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,14 +20,14 @@ requirements:
     - toolchain
     - python
     - cmake
-    - boost-cpp 1.65.1
+    - boost-cpp 1.66.*
     - mpfr 3.1.*
     - eigen
     - swig
 
   run:
     - python
-    - boost-cpp 1.65.1
+    - boost-cpp 1.66.*
     - mpfr 3.1.*
 
 test:
