Update to use Boost 1.67

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,7 +9,7 @@ source:
   sha256: e74cb61b780f2fd04924761b6f7fd90c73df9997a670fab730c82236f00f1984
 
 build:
-  number: 2
+  number: 3
   features:
     - vc14  # [win and (py35 or py36)]
   # mpfr only supports vc14
@@ -20,14 +20,14 @@ requirements:
     - toolchain
     - python
     - cmake
-    - boost-cpp 1.66.0
+    - boost-cpp 1.67.0
     - mpfr 3.1.*
     - eigen
     - swig
 
   run:
     - python
-    - boost-cpp 1.66.0
+    - boost-cpp 1.67.0
     - mpfr 3.1.*
 
 test:
@@ -48,3 +48,4 @@ about:
 extra:
   recipe-maintainers:
     - xantares
+    - tadeu
