--- a/.ci_support/linux_c_compilergcccxx_compilergxxpython3.6.yaml
+++ b/.ci_support/linux_c_compilergcccxx_compilergxxpython3.6.yaml
@@ -1,5 +1,5 @@
 boost_cpp:
-- 1.67.0
+- 1.68.0
 build_number_decrement:
 - '0'
 c_compiler:
@@ -11,7 +11,7 @@ channel_targets:
 cxx_compiler:
 - gxx
 docker_image:
-- conda/c3i-linux-64
+- condaforge/linux-anvil-comp7
 mpfr:
 - '4'
 pin_run_as_build:
