--- a/.ci_support/osx_python3.6.yaml
+++ b/.ci_support/osx_python3.6.yaml
@@ -1,11 +1,15 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
 boost_cpp:
-- 1.67.0
+- 1.68.0
 c_compiler:
-- toolchain_c
+- clang
+channel_sources:
+- conda-forge,defaults
+channel_targets:
+- conda-forge main
 cxx_compiler:
-- toolchain_cxx
+- clangxx
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
@@ -18,7 +22,7 @@ pin_run_as_build:
   mpfr:
     max_pin: x
   python:
-    max_pin: x.x
     min_pin: x.x
+    max_pin: x.x
 python:
 - '3.6'
