--- a/.ci_support/win_c_compilervs2015cxx_compilervs2015python3.7.yaml
+++ b/.ci_support/win_c_compilervs2015cxx_compilervs2015python3.7.yaml
@@ -1,7 +1,11 @@
 boost_cpp:
-- 1.67.0
+- 1.68.0
 c_compiler:
 - vs2015
+channel_sources:
+- conda-forge,defaults
+channel_targets:
+- conda-forge main
 cxx_compiler:
 - vs2015
 mpfr:
@@ -12,10 +16,10 @@ pin_run_as_build:
   mpfr:
     max_pin: x
   python:
-    max_pin: x.x
     min_pin: x.x
+    max_pin: x.x
 python:
-- '3.5'
+- '3.7'
 zip_keys:
 - - python
   - c_compiler
