--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,15 +1,15 @@
-{% set version = "4.14" %}
+{% set version = "4.14.2" %}
 
 package:
   name: cgal
   version: {{ version }}
 
 source:
-  url: https://github.com/CGAL/cgal-swig-bindings/archive/55635605ed9287f963800d2e0dc5dac6bd3fa899.zip
-  sha256: efa305ae2f9c58fd8009f438900925cbf000d8f6789dd08551423640e06ab50a
+  url: https://github.com/CGAL/cgal/releases/download/releases%2FCGAL-{{ version }}/CGAL-{{ version }}.tar.xz
+  sha256: 819b6863614ee65ab0edc98bf70321b6cb65e0b40b8d40fe7bd737eee0b89922
 
 build:
-  number: 1
+  number: 0
   skip: true  # [(win and py<35)]
 
 requirements:
