--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,6 +7,8 @@ package:
 source:
   url: https://github.com/CGAL/cgal-swig-bindings/archive/e14208e0f076c03a5c8ac69b430dad43f38c7ab4.zip
   sha256: ac51635c172c2b07af887847cf82118df388d0af6096777848595de7ff755105
+  patches:  # [osx]
+    - 0001-Fix-macOS-builds-that-need-the-CMP0025-policy.patch  # [osx]
 
 build:
   number: 0
