--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,12 +1,12 @@
-{% set version = "5.4" %}
+{% set version = "5.5.1" %}
 
 package:
   name: cgal
   version: {{ version }}
 
 source:
-  url: https://github.com/CGAL/cgal-swig-bindings/archive/5750b98dd1f760ba5ab24662957c1e1438bde8bb.zip
-  sha256: e31e0253e5251d80cff36b219794894ce73b53d5cdd0f8fcae73180e0326704e
+  url: https://github.com/CGAL/cgal-swig-bindings/archive/refs/tags/v5.5.1.post202210141207.zip
+  sha256: ff06410df2b47baf737ed1641a6c347ed19478b6653ed0ae1e53a6c76b4bb189
   patches:
     - osx-fix.patch  # [osx]
 
