Add runtime dependencies
As cgal-cpp 5.5 is now header only, we need to add the runtime
dependencies in this package.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,7 +30,10 @@ requirements:
     - numpy
     - python
   run:
+    - boost-cpp
     - cgal-cpp {{ base_verson }}
+    - gmp
+    - mpfr
     - {{ pin_compatible('numpy') }}
     - python
 
