--- a/.ci_support/linux_64_numpy1.23python3.11.____cpython.yaml
+++ b/.ci_support/linux_64_numpy1.23python3.11.____cpython.yaml
@@ -14,8 +14,12 @@ cxx_compiler_version:
 - '12'
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
+gmp:
+- '6'
 libboost_devel:
 - '1.82'
+mpfr:
+- '4'
 numpy:
 - '1.23'
 pin_run_as_build:
