--- a/.ci_support/osx_64_numpy1.22python3.8.____cpython.yaml
+++ b/.ci_support/osx_64_numpy1.22python3.8.____cpython.yaml
@@ -12,10 +12,14 @@ cxx_compiler:
 - clangxx
 cxx_compiler_version:
 - '16'
+gmp:
+- '6'
 libboost_devel:
 - '1.82'
 macos_machine:
 - x86_64-apple-darwin13.4.0
+mpfr:
+- '4'
 numpy:
 - '1.22'
 pin_run_as_build:
