--- a/.ci_support/osx_arm64_numpy1.26python3.12.____cpython.yaml
+++ b/.ci_support/osx_arm64_numpy1.26python3.12.____cpython.yaml
@@ -12,10 +12,14 @@ cxx_compiler:
 - clangxx
 cxx_compiler_version:
 - '16'
+gmp:
+- '6'
 libboost_devel:
 - '1.82'
 macos_machine:
 - arm64-apple-darwin20.0.0
+mpfr:
+- '4'
 numpy:
 - '1.26'
 pin_run_as_build:
